# Termat-Engine

./: .clang-format  CMakeLists.txt
assets/: Sprite-128x128.ppm  Sprite-254x254.ppm  Sprite-32x32.ppm  Sprite-64x64.ppm
src/: main.cpp  nomain.cpp
src/gfx/: gfx.cpp
src/include/termat/: api.hpp  core.hpp  gfx.hpp  samples.hpp
src/samples/: a-star.hpp  termat-intro.hpp
